src/components/chronology/card/card.module.scss
@use '~styles/util/variables.global' as v;
@use '~styles/util/mixins.global' as m;
@use '~styles/util/functions.global' as f;
@use '../chronology.module.scss' as c;

$card-border: 35px;
$card-total-margin: c.$filter-menu-height + c.$timeline-height +
	c.$card-top-margin + c.$card-bottom-margin;
$card-portrait-max-height: 80vh;
$card-portrait-width: 80vw;

.card {
	//TODO remove color vars
	@include m.neumorphic-intensity(
		12px,
		25px,
		v.$blue-bg,
		80%
	); // TODO consistency with rest of site

	animation: card-scaleX-to-show 0ms;
	animation-fill-mode: both;
	background-color: v.$blue-card-bg;
	border-radius: v.$border-radius;
	box-sizing: border-box;
	color: v.$white;
	display: grid;
	grid-template-columns: 100%;
	grid-template-rows: 1fr $card-border;
	margin: 0 c.$card-margin 0 0;
	max-height: calc(100vh - #{$card-total-margin});
	overflow: hidden;
	transition: none;
	width: c.$card-width; //TODO right?
	will-change: transform, width, margin;
	@include m.media('portrait') {
		animation: card-scaleY-to-show 0ms;
		margin: 0 auto c.$card-margin auto;
		max-height: $card-portrait-max-height;
		width: $card-portrait-width;
		will-change: transform, height, margin;
	}
}

@keyframes card-scaleX-to-hide {
	0% {
		margin: 0 c.$card-margin 0 0;
		transform: scaleX(1);
		width: c.$card-width;
	}
	49.9% {
		margin: 0 c.$card-margin 0 0;
		width: c.$card-width;
	}
	50% {
		margin: 0 c.$card-margin/2 0 0;
		width: c.$card-width/2;
	}
	99.9% {
		margin: 0 c.$card-margin/2 0 0;
		transform: scaleX(0);
		width: c.$card-width/2;
	}
	100% {
		margin: 0;
		width: 0;
	}
}

@keyframes card-scaleX-to-show {
	0% {
		margin: 0;
		transform: scaleX(0);
		width: 0;
	}
	49.9% {
		margin: 0;
		width: 0;
	}
	50% {
		margin: 0 c.$card-margin/2 0 0;
		width: c.$card-width/2;
	}
	99.9% {
		margin: 0 c.$card-margin/2 0 0;
		transform: scaleX(1);
		width: c.$card-width/2;
	}
	100% {
		margin: 0 c.$card-margin 0 0;
		width: c.$card-width;
	}
}

@keyframes card-scaleY-to-hide {
	0% {
		margin: 0 auto c.$card-margin auto;
		max-height: $card-portrait-max-height;
		transform: scaleY(1);
	}
	49.9% {
		margin: 0 auto c.$card-margin auto;
		max-height: $card-portrait-max-height;
	}
	50% {
		margin: 0 auto c.$card-margin/2 auto;
		max-height: $card-portrait-max-height/2;
	}
	99.9% {
		margin: 0 auto c.$card-margin/2 auto;
		max-height: $card-portrait-max-height/2;
		transform: scaleY(0);
	}
	100% {
		margin: 0;
		max-height: 0;
	}
}

@keyframes card-scaleY-to-show {
	0% {
		margin: 0;
		max-height: 0;
		transform: scaleY(0);
	}
	49.9% {
		margin: 0;
		max-height: 0;
	}
	50% {
		margin: 0 auto c.$card-margin/2 auto;
		max-height: $card-portrait-max-height/2;
	}
	99.9% {
		margin: 0 auto c.$card-margin/2 auto;
		max-height: $card-portrait-max-height/2;
		transform: scaleY(1);
	}
	100% {
		margin: 0 auto c.$card-margin auto;
		max-height: $card-portrait-max-height;
	}
}

.hidden {
	animation: card-scaleX-to-hide 0ms;
	@include m.media('portrait') {
		animation: card-scaleY-to-hide 0ms;
	}
}

.animate {
	animation-duration: 200ms;
	animation-fill-mode: both;
	animation-timing-function: v.$timing-function;
}

.inner {
	@include m.custom-scrollbar(v.$blue-card-bg, v.$white);

	border: $card-border solid transparent;
	box-sizing: border-box;
	display: grid;
	grid-column: 1;
	grid-row-end: 3;
	grid-row-start: 1;
	grid-template-columns: 1fr;
	grid-template-rows: minmax(0, max-content) minmax(0, min-content) minmax(
			0,
			max-content
		); //TODO massacre of tranent and perfect spacing

	overflow-y: auto;
	width: c.$card-width;
	//TODO name grids everywhere
	// TODO remove image named grid

	@include m.media('portrait') {
		width: 80vw; //TODO var
	}
}

.header {
	grid-row: 2;
	outline: none;
	word-break: break-word;
}

.title-link {
	color: v.$white;
	margin-bottom: 1rem;

	.image {
		margin-bottom: 0;
	}
}

.header-no-image {
	margin-top: 0;
}

.image {
	grid-row: 1;
	margin-bottom: 1rem;
	max-height: 100%;
	object-fit: contain;
	object-position: center 35%;
	outline: none;
	width: 100%;
}
// TODO Zoom
// TODO fix mixins and ect. for breakpoints
// TODO border on bottom of menu

.text {
	grid-row: 3;
	white-space: break-spaces;
}

.display-date {
	align-self: center;
	grid-column: 1;
	grid-row: 2;
	overflow: hidden;
	text-align: center;
	text-transform: uppercase;
	width: c.$card-width;
}

